syntax = "proto3";

option csharp_namespace = "Coupon.Grpc";


// The greeting service definition.
service DiscountProtoService {
  // Sends a greeting
  rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
}


message GetDiscountRequest {
	string productName = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}
